Fix layout problem

--- a/kapi-theme/style.css
+++ b/kapi-theme/style.css
@@ -331,7 +331,7 @@ footer {
 
 @media screen and (min-width: 1024px) {
     .main-contents {
-        max-width: 75%;
+        min-width: 75%;
     }
     .blog-post-summary {
         width: 29%;
